# IonVision

./: .gitignore  404.html  LICENSE  README.md  adding_hyperfine.ipynb  adding_sideband.ipynb  energy_level_generator_Sr.ipynb  energy_level_intro.ipynb  example.ipynb  index.html  main.ipynb  main_energy_level_generator.ipynb  mkdocs.yml  objects.inv  pulse_sequence_generator_Sr.ipynb  pyproject.toml  requirements.txt  sitemap.xml
Milestone1/: plotter.py
Milestone1/Example/: Energy_Level_Diagrams.ipynb
OxfordIonTrap/: test.ipynb
SrZeeman/: SrWithoutZeeman.ipynb  sr88_base.json
api/energy_level_generator/: index.html
api/pulse_sequence_generator/: index.html
archive/week5/: Hello.ipynb
docs/: CNAME  index.md  reference.md
energy_level_generator/: SrPrepDown.json  SrPrepUp.json  SrStatePrep.json  __init__.py  format.py  layout.py  main.ipynb  models.py  physics.py  plotter.py  read.py  render.py  splitters.py  style.py
how-to/: energy.json  energy_style.json
notebooks/: adding_hyperfine.ipynb  adding_sideband.ipynb  energy_level_intro.ipynb  main_energy_level_generator.ipynb  selection_rules_flowchart.ipynb
pulse_sequence_generator/: __init__.py  config.py  core.py  cz_gate.json  io.py  main.ipynb  plot.py  utils.py
site/: 404.html  objects.inv  sitemap.xml
styles/: nqcc.css
week3/: CaTest.json  SrDetect.json  SrPrepDown.json  SrPrepUp.json  SrStatePrep.json  format.py  io.py  layout.py  main.ipynb  physics.py  plotter.py  splitters.py  style.py  test.json
week4/: StatePrepDetect.json  config.py  core.py  io.py  main.ipynb  plot.py  utils.py
(+115 files in other folders)
