[project]
name = "nqcc_ion_trap_summer_project"
version = "0.1.0"
requires-python = ">=3.11.9"

dependencies = [
 "numpy",
 "scipy",
 "pytest"
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]

 